--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ pymysql = "^1.1.1"
 aiomysql = "^0.2.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest-asyncio = "^0.23.7"
+aiosqlite = "^0.20.0"
+httpx = "^0.27.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
